# riemann-problem-solver

./: LICENSE  README.md  meson.build  plot.py  riemann.cpp  riemann.hpp  tests.cpp
